{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 41,
  "lineage": "716b5ae3-393a-80a5-ac65-eb243351abcb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:internet-gateway/igw-07ff88a32111442f9",
            "id": "igw-07ff88a32111442f9",
            "owner_id": "698528536903",
            "tags": {
              "Name": "aws-ha-secure-webapp-igw",
              "Project": "aws-ha-secure-webapp"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-igw",
              "Project": "aws-ha-secure-webapp"
            },
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07ff88a32111442f9",
            "id": "r-rtb-032114c6060a5d80c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-032114c6060a5d80c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:route-table/rtb-00346043b6dabe1f7",
            "id": "rtb-00346043b6dabe1f7",
            "owner_id": "698528536903",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-ha-secure-webapp-rt-private-app",
              "Project": "aws-ha-secure-webapp"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-rt-private-app",
              "Project": "aws-ha-secure-webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:route-table/rtb-0dd2cb917ac981a96",
            "id": "rtb-0dd2cb917ac981a96",
            "owner_id": "698528536903",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aws-ha-secure-webapp-rt-private-db",
              "Project": "aws-ha-secure-webapp"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-rt-private-db",
              "Project": "aws-ha-secure-webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:route-table/rtb-032114c6060a5d80c",
            "id": "rtb-032114c6060a5d80c",
            "owner_id": "698528536903",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ff88a32111442f9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-ha-secure-webapp-rt-public",
              "Project": "aws-ha-secure-webapp"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-rt-public",
              "Project": "aws-ha-secure-webapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f6c30f6aaf3a29b",
            "route_table_id": "rtb-00346043b6dabe1f7",
            "subnet_id": "subnet-0b53defe02c820d5d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029c7bff20e693e0e",
            "route_table_id": "rtb-00346043b6dabe1f7",
            "subnet_id": "subnet-0e28b71da1dddb99f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_app",
            "aws_subnet.private_app",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4a14f2af12810da",
            "route_table_id": "rtb-0dd2cb917ac981a96",
            "subnet_id": "subnet-05df2e4e996994aac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05093c6146d3210ef",
            "route_table_id": "rtb-0dd2cb917ac981a96",
            "subnet_id": "subnet-0decd7e55f6a7f5ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_db",
            "aws_subnet.private_db",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046bf7dc29df6d4a4",
            "route_table_id": "rtb-032114c6060a5d80c",
            "subnet_id": "subnet-044675df49cc4f7fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015cf7c83dbb3b658",
            "route_table_id": "rtb-032114c6060a5d80c",
            "subnet_id": "subnet-0c477c21422233761"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:subnet/subnet-0b53defe02c820d5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b53defe02c820d5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698528536903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-ha-secure-webapp-private-app-1",
              "Project": "aws-ha-secure-webapp",
              "Tier": "private-app"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-private-app-1",
              "Project": "aws-ha-secure-webapp",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:subnet/subnet-0e28b71da1dddb99f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e28b71da1dddb99f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698528536903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-ha-secure-webapp-private-app-2",
              "Project": "aws-ha-secure-webapp",
              "Tier": "private-app"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-private-app-2",
              "Project": "aws-ha-secure-webapp",
              "Tier": "private-app"
            },
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:subnet/subnet-05df2e4e996994aac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05df2e4e996994aac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698528536903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-ha-secure-webapp-private-db-1",
              "Project": "aws-ha-secure-webapp",
              "Tier": "private-db"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-private-db-1",
              "Project": "aws-ha-secure-webapp",
              "Tier": "private-db"
            },
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:subnet/subnet-0decd7e55f6a7f5ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0decd7e55f6a7f5ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "698528536903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-ha-secure-webapp-private-db-2",
              "Project": "aws-ha-secure-webapp",
              "Tier": "private-db"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-private-db-2",
              "Project": "aws-ha-secure-webapp",
              "Tier": "private-db"
            },
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:subnet/subnet-044675df49cc4f7fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044675df49cc4f7fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698528536903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-ha-secure-webapp-public-1",
              "Project": "aws-ha-secure-webapp",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-public-1",
              "Project": "aws-ha-secure-webapp",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:subnet/subnet-0c477c21422233761",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c477c21422233761",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "698528536903",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-ha-secure-webapp-public-2",
              "Project": "aws-ha-secure-webapp",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-public-2",
              "Project": "aws-ha-secure-webapp",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c78bea63aa9c650b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:698528536903:vpc/vpc-0c78bea63aa9c650b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c29751810542a61",
            "default_route_table_id": "rtb-0919c23f1b810cdfe",
            "default_security_group_id": "sg-0a4a95eaa789f9e00",
            "dhcp_options_id": "dopt-00d5c95c2a3a9b688",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c78bea63aa9c650b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0919c23f1b810cdfe",
            "owner_id": "698528536903",
            "tags": {
              "Name": "aws-ha-secure-webapp-vpc",
              "Project": "aws-ha-secure-webapp"
            },
            "tags_all": {
              "Name": "aws-ha-secure-webapp-vpc",
              "Project": "aws-ha-secure-webapp"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}